--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,10 +14,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # GitHub OAuth Configuration
-spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
-spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
-spring.security.oauth2.client.registration.github.scope=${GITHUB_SCOPE}
-spring.security.oauth2.client.registration.github.redirect-uri=${GITHUB_REDIRECT_URI}
+spring.security.oauth2.client.registration.github.client-id=${CLIENT_ID}
+spring.security.oauth2.client.registration.github.client-secret=${CLIENT_SECRET}
+spring.security.oauth2.client.registration.github.scope=${SCOPE}
+spring.security.oauth2.client.registration.github.redirect-uri=${REDIRECT_URI}
 spring.security.oauth2.client.provider.github.authorization-uri=https://github.com/login/oauth/authorize
 spring.security.oauth2.client.provider.github.token-uri=https://github.com/login/oauth/access_token
 spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.com/user
